temlate example add

--- a/src/documents/templates/documents/detail.html
+++ b/src/documents/templates/documents/detail.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
-
-
+{#    <title>{{ dokuman.detay }}</title>#}
+    <title>Döküman Detay</title>
 {% block content %}
-
     <div class="container" align="center">
-        <h1>Belge Listesi</h1>
-        {% for i in qm %}
-            <li> {{ i }}</li>
-        {% endfor %}
+    <h1>Döküman Detay</h1>
     </div>
 {% endblock %}
