--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
+<div class="container" align="center">
     <h1>Login</h1>
     <form method="POST">
         {% csrf_token %}
-        {% bootstrap_form form %}
+{#        {% bootstrap_form form %}#}
+        {{ form|crispy }}
         <input type="submit" value="Login" class="btn btn-default">
     </form>
 </div>
