--- a/src/accounts/templates/accounts/signup.html
+++ b/src/accounts/templates/accounts/signup.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load crispy_forms_tags %}
 
 
 {% block content %}
-<div class="container">
+<div class="container" align="center">
     <h1>Sign Up</h1>
     <form method="POST">
         {% csrf_token %}
-        {% bootstrap_form form %}
+{#            {% bootstrap_form form %}#}
+        {{ form|crispy }}
         <input type="submit" value="Sign Up" class="btn btn-default">
     </form>
 </div>
