--- a/src/documents/templates/documents/image_form.html
+++ b/src/documents/templates/documents/image_form.html
@@ -1,6 +1,8 @@
-{#{% extends "base.html" %}#}
-{#{% load static %}#}
-{#{% load staticfiles %}#}
+{% extends "base.html" %}
+{% load static %}
+{% load staticfiles %}
+{% load crispy_forms_tags %}
+{% load bootstrap3 %}
 
 {% block content %}
 
@@ -8,8 +10,9 @@
     <div class="container">
         <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.as_p  }}
-            <input type="submit" value="Upload" class="btn btn-outlined-primary">
+{#           {% bootstrap_form form %}#}
+            {{ form|crispy }}
+            <input type="submit" value="Gonder gitsin" class="btn btn-outlined-primary">
         </form>
 
         {% if form.errors %}
