--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,10 +30,11 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
-          <a class="nav-item nav-link" href="#"><span class="oi oi-plus"></span></a>
-{#          <a class="nav-item nav-link" href="{% url 'create' %}"><span class="oi oi-plus"></span></a>#}
+{#          <a class="nav-item nav-link" href="#"><span class="oi oi-plus"></span></a>#}
+          <a class="nav-item nav-link" href="{% url 'detail' %}"><span class="oi oi-plus">  Detail</span></a>
+          <a class="nav-item nav-link" href="{% url 'file' %}"><span class="oi oi-plus">  File</span></a>
           <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}" onclick="">Logout</a>
-          <form id="logout" method="POST" action="{% url 'logout' %}">
+              <form id="logout" method="POST" action="{% url 'logout' %}">
             {% csrf_token %}
             <input type="hidden" />
           </form>
@@ -47,7 +48,21 @@
     </nav>
   </header>
 
+
   <div class="container">
+
+  {#  django mesajları buradan geliyor #}
+
+      {% if messages %}
+          {% for message in messages %}
+              {% if message.tags == info %}
+                  <div class="alert-alert-daner">{{ message }}</div>
+              {% else %}
+                  <div class="alert-alert-{{ message.tags }}">{{ message }}</div>
+              {% endif %}
+          {% endfor %}
+      {% endif %}
+
 
     {% block content %}
     {% endblock %}
