--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
-{#          <a class="nav-item nav-link" href="#"><span class="oi oi-plus"></span></a>#}
+          <a class="nav-item nav-link" href="{% url 'demo' %}"><span class="oi oi-plus">demo</span></a>
           <a class="nav-item nav-link" href="{% url 'detail' %}"><span class="oi oi-plus">  Detail</span></a>
           <a class="nav-item nav-link" href="{% url 'file' %}"><span class="oi oi-plus">  File</span></a>
           <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}" onclick="">Logout</a>
