temlate example add

--- a/src/documents/templates/documents/detail.html
+++ b/src/documents/templates/documents/detail.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% load bootstrap3 %}
+{% extends "base/base.html" %}
+{% load bootstrap4 %}
 {#    <title>{{ dokuman.detay }}</title>#}
     <title>Döküman Detay</title>
 {% block content %}
