--- a/src/accounts/templates/accounts/signup1.html
+++ b/src/accounts/templates/accounts/signup1.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% load bootstrap3 %}
+{% extends "base/base.html" %}
+{% load bootstrap4 %}
 {% load crispy_forms_tags %}
 
 
