--- a/src/documents/templates/documents/image_form.html
+++ b/src/documents/templates/documents/image_form.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 
 {% block content %}
 
