--- a/src/accounts/templates/accounts/usertable_form.html
+++ b/src/accounts/templates/accounts/usertable_form.html
@@ -15,3 +15,102 @@
         </div>
     </div>
 {% endblock content%}
+
+{#    {% extends 'base/base.html' %}#}
+{##}
+{#{% block content %}#}
+{##}
+{# <div class="row justify-content-center" style="padding-top: 1rem">#}
+{#     <div class="col-md-10">#}
+{#         <div class="card">#}
+{#             <div class="card-header text-center">Sign up</div>#}
+{#             <div class="card-body">#}
+{#                 <form method="POST">#}
+{#                     {% csrf_token %}#}
+{#                     <div class="form-row">#}
+{#                         <div class="form-group col-md-4">#}
+{#                             <label >{{ form.username.label }}</label>#}
+{#                             {{ form.username }}#}
+{#                             {% for error in form.username.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{##}
+{#                         <div class="form-group col-md-4">#}
+{#                             <label>{{ form.first_name.label }}</label>#}
+{#                             {{ form.first_name }}#}
+{#                             {% for error in form.first_name.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{##}
+{#                         <div class="form-group col-md-4">#}
+{#                             <label>{{ form.last_name.label }}</label>#}
+{#                             {{ form.last_name }}#}
+{#                             {% for error in form.last_name.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{#                     </div>#}
+
+{#                     <div class="form-row">#}
+{#                         <div class="form-group col-md-4">#}
+{#                             <label >{{ form.age.label }}</label>#}
+{#                             {{ form.age }}#}
+{#                             {% for error in form.age.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+
+{#                         <div class="form-group col-md-4">#}
+{#                             <label >{{ form.gender.label }}</label>#}
+{#                             {{ form.gender }}#}
+{#                             {% for error in form.gender.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{##}
+{#                         <div class="form-group col-md-4">#}
+{#                             <label >{{ form.country.label }}</label>#}
+{#                             {{ form.country}}#}
+{#                             {% for error in form.country.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{#                     </div>#}
+
+{#                     <div class="form-row">#}
+{#                         <div class="form-group col-md-6">#}
+{#                             <label >{{ form.email.label }}</label>#}
+{#                             {{ form.email }}#}
+{#                              {% for error in form.email.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{##}
+{##}
+{#                     <div class="form-row">#}
+{#                         <div class="form-group col-md-6">#}
+{#                             <label >{{ form.email.label }}</label>#}
+{#                             {{ form.email }}#}
+{#                              {% for error in form.email.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{##}
+{#                         <div class="form-group col-md-6">#}
+{#                             <label >{{ form.password.label }}</label>#}
+{#                             {{ form.password }}#}
+{#                              {% for error in form.password.errors %}#}
+{#                                 <div class="invalid-feedback">{{ error }}</div>#}
+{#                             {% endfor %}#}
+{#                         </div>#}
+{#                     </div>#}
+{#                     <button type="submit" class="btn btn-primary">Sign in</button>#}
+{#                 </form>#}
+{#             </div>#}
+{#         </div>#}
+{#     </div>#}
+{# </div>#}
+{##}
+{#{% endblock %}#}
