temlate example add

--- a/src/Article/templates/article/revision_list.html
+++ b/src/Article/templates/article/revision_list.html
@@ -7,7 +7,10 @@
     <div class="container">
     <p>revision_list</p>
     <div class="align-left">
-{#    <a class="btn btn-success btn-sm" href="{% url '' %} }">Ekle</a><br><br>#}
+
+
+
+    <a class="btn btn-success btn-sm" href="{% url 'article_item_add' pk=1  %}">Ekle</a><br><br>
 
     <table class="table fa-border">
         <tr>
