--- a/src/accounts/templates/accounts/usertable_detail.html
+++ b/src/accounts/templates/accounts/usertable_detail.html
@@ -1,8 +1,7 @@
-{% extends "base/base.html" %}
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-{% block title %}
-    Karakter Detay Sayfası
-{% endblock title %}
+
 
 {% block content %}
     {% if request.user.is_authenticated %}
@@ -13,7 +12,7 @@
         <p> İsim = {{ user_detail.first_name }}</p>
         <p> Soyisim = {{ user_detail.last_name }}</p>
         <p> Son giriş taihi = {{ user_detail.last_login }}</p>
-        <p> Doğum tarihi = {{ user_detail.birth_day }}</p>
+        <p> Doğum tarihi = {{ user_detail.birth_date }}</p>
         <p> Telephone = {{ user_detail.telephone }}</p><br>
         <hr>
 {#        <h1 style="text-align: center">Karakter detayları {% if is_me %}<a class="btn btn-secondary btn-sm" href="{% url "update_character" %}"><small>Güncelle</small></a> {% endif %}#}
