--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -31,24 +31,40 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    {% if user.is_authenticated %}
-                        <p>{{ request.user.username }}</p>
-                        <a class="nav-item nav-link" href="{% url 'article_add' %}"><span class="oi oi-plus">Klasör Ekle</span></a>
+
+
+{% if user.is_authenticated %}
+<div class="dropdown">
+<a class="btn dropdown-toggle"  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<span class="oi oi-person"></span>
+</a>
+<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="nav-item nav-link" href="{% url 'panel' %}">USER PANEL</a>
+    <hr>
+<a  class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}" onclick="">Logout</a>
+<form id="logout" method="POST" action="{% url 'logout' %}">
+{% csrf_token %}
+<input type="hidden"/>
+</form>
+
+{% else %}
+<a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
+<a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+{% endif %}
+  </div>
+</div>
+
+
+
+                        <a class="nav-item nav-link" href="{% url 'home' %}">Article</a>
+                        <a class="nav-item nav-link" href="{% url 'article_add' %}" ><span class="oi oi-plus">Klasör Ekle</span></a>
                         <a class="nav-item nav-link" href="{% url 'article_update' %}"><span class="oi oi-plus">Dosya Ekle</span></a>
 {#                        <a class="nav-item nav-link" href="{% url 'demo' %}"><span class="oi oi-plus">demo</span></a>#}
 {#                        <a class="nav-item nav-link" href="{% url 'detail' %}"><span class="oi oi-plus">  Detail</span></a>#}
 {#                        <a class="nav-item nav-link" href="{% url 'file' %}"><span class="oi oi-plus">  File</span></a>#}
-                        <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}"
-                           onclick="">Logout</a>
-                        <form id="logout" method="POST" action="{% url 'logout' %}">
-                            {% csrf_token %}
-                            <input type="hidden"/>
-                        </form>
-                    {% else %}
-                        <p>Giriş yapmayı deneyebilirsiniz.</p>
-                        <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
-                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                    {% endif %}
+
+
+
                 </div>
             </div>
         </div>
