--- a/src/Article/templates/article/detail.html
+++ b/src/Article/templates/article/detail.html
@@ -54,8 +54,39 @@
     <p>Ekleme Tarihi - {{ object.date }}</p>
     <p>Dosya Bilgisi - {{ object.file }}</p>
     <p>Benzersiz No - {{ object.file_sha1 }}</p>
-    <p><img class="card-img-bottom" src="{{ object.file.url }}"></p>
+{#    <p><iframe class="card-img-bottom" src="{{ object.file.url }}"></iframe></p>#}
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Döküman
+</button>
+
     <hr>
+
+
+    <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div style="height: 100%; width: 100%" class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ revisions.article }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <iframe style="width:480px; height: 640px;" class="card-img-bottom" src="{{ object.file.url }}"></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 {% endblock %}
