--- a/src/Article/templates/article/article_list.html
+++ b/src/Article/templates/article/article_list.html
@@ -17,13 +17,26 @@
                 </tr>
 
                 {% for i in object_list %}
-                    <tr>
-                        <td>{{ i.id }}</td>
-                        <td>{{ i.title }}</td>
-                        <td>{{ i.active }}</td>
-                        <td><a class="btn btn-secondary btn-sm" href="{% url "revizyonlist" i.id %}">Detay</a></td>
-                    </tr>
-                {% endfor %}
+
+                        <tr>
+                            <td>{{ i.id }}</td>
+                            <td>{{ i.title }}</td>
+                            <td>{{ i.active }}</td>
+                            <td><a class="btn btn-secondary btn-sm" href="{% url "revizyonlist" i.id %}">Detay</a></td>
+                        </tr>
+{#                        {% elif not i.active %}#}
+{#                            <tr>#}
+{#                            <td>{{ i.id }}</td>#}
+{#                            <td>{{ i.title }}</td>#}
+{#                            <td>{{ i.active }}</td>#}
+{#                            <td><a class="btn btn-secondary btn-sm" href="{% url "revizyonlist" i.id %}">Detay</a></td>#}
+{#                        {% else i.active or not i.active%}#}
+{#                            <td>{{ i.id }}</td>#}
+{#                            <td>{{ i.title }}</td>#}
+{#                            <td>{{ i.active }}</td>#}
+{#                            <td><a class="btn btn-secondary btn-sm" href="{% url "revizyonlist" i.id %}">Detay</a></td>#}
+
+  {% endfor %}
             </table>
         </div>
     </div>
