--- a/src/Article/templates/article/detail.html
+++ b/src/Article/templates/article/detail.html
@@ -3,48 +3,6 @@
 {#    <title>{{ dokuman.detay }}</title>#}
     <title>Döküman Detay</title>
 {% block content %}
-{#  <input type="text" value="{{ revisions.article.title }}"/> <br>#}
-{#  <input type="text" value="{{ revisions.article.active }}"/><br>#}
-{#    <input type="text" value="{{ revisions.file }}"/>#}
-{#   <input type="file" value="{{ revisions.file }}"/><br>#}
-{#   <input type="text" value="{{ revisions.uploader }}"/><br>#}
-{#    <br>#}
-{#    <a class="btn btn-success" href="{% url "article_add"%}">Ekle</a>#}
-{#    <a class="btn btn-info" href="{% url "article-detail" pk=revisions.id%}">Güncelle</a>#}
-{#    <a class="btn btn-danger" href="{% url "article-detail" pk=revisions.id%}">sil</a>#}
-{#    <br>#}
-{#    <table class="table fa-border">#}
-{#        <tr>#}
-{#            <th>Sıra No </th>#}
-{#            <th>Adı</th>#}
-{#            <th>Türü</th>#}
-{#            <th>Açıklama</th>#}
-{#            <th>Oluşturma Tarihi</th>#}
-{#            <th></th>#}
-{#            {% for revision in revisions %}#}
-{##}
-{#            {{ revision.article_id }}#}
-{#           {{ revision.article }}#}
-{#            {{ revision.comment }}#}
-{#            {% endfor %}#}
-{##}
-{#        </tr>#}
-{#        {% for i in object_list %}#}
-{##}
-{#        <tr>#}
-{#            <td>{{ i }}</td>#}
-{#            <td>{{ i.id }}</td>#}
-{#            <td>{{ i.article.title }}</td>#}
-{#            <td>{{ i.article.type }}</td>#}
-{#            <td>{{ i.comment }}</td>#}
-{#            <td>{{ i.date }}</td>#}
-{#            <td><a class="btn btn-secondary btn-sm" href="{% url "" i.pk%}">Detay</a></td>#}
-{#        </tr>#}
-{#        {% endfor %}#}
-{#    </table>#}
-{##}
-{#{% endblock %}#}
-
     <h3>Detay Bilgi</h3>
     <hr>
     <p>ID - {{ object.id}}</p>
@@ -77,17 +35,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">{{ revisions.article }}</h5>
+        <h5 class="modal-title" id="exampleModalLabel" style="text-align: center;">{{ revisions.article }}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <iframe style="width:480px; height: 640px;" class="resp-iframe" src="{{ object.file.url }}"></iframe>
+        <iframe style="width: 465px; height: 640px;" class="resp-iframe" src="{{ object.file.url }}"></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
