--- a/src/Article/templates/article/article_list.html
+++ b/src/Article/templates/article/article_list.html
@@ -24,7 +24,7 @@
                             <td>{{ i.active }}</td>
                             <td><a class="btn btn-secondary btn-sm" href="{% url "revizyonlist" i.id %}">Detay</a></td>
                         </tr>
-                        <td><a class="btn btn-secondary btn-sm" href="{% url "revizyonlist" i.id %}">Detay</a></td>#}
+{#                        <td><a class="btn btn-secondary btn-sm" href="{% url "revizyonlist" i.id %}">Detay</a></td>#}
 
   {% endfor %}
             </table>
